--- a/sky Pictures, sky Images, sky Photos, sky Videos - Images Search - TinyPic - Free Image Hosting, Photo Sharing & Video Hosting_files/track.html
+++ b/sky Pictures, sky Images, sky Photos, sky Videos - Images Search - TinyPic - Free Image Hosting, Photo Sharing & Video Hosting_files/track.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0048)http://tinypic.com/track.php?track=search_images -->
-<html xmlns="http://www.w3.org/1999/xhtml"><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title></title>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Tracking</title>
 <script src="./jquery.pack_v4.4.1.js.download" type="text/javascript"></script>
 <script src="./track_v4.4.1.js.download" type="text/javascript"></script>
 </head>
