--- a/sky Pictures, sky Images, sky Photos, sky Videos - Images Search - TinyPic - Free Image Hosting, Photo Sharing & Video Hosting_files/saved_resource.html
+++ b/sky Pictures, sky Images, sky Photos, sky Videos - Images Search - TinyPic - Free Image Hosting, Photo Sharing & Video Hosting_files/saved_resource.html
@@ -1,3 +1,4 @@
 
 <!-- saved from url=(0011)about:blank -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body></body></html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>saved resources</title></head><body></body></html>
